# ApprovalML

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROMPT.md  README.md  cli.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  verify.yml
approvalml/: __init__.py  duration.py  expression_evaluator.py  form_validator.py  mcp_client.py  mcp_proxy.py  mcp_server.py  parser.py  syntax_reference.py
approvalml/runtime/: __init__.py  base.py  email_smtp.py  engine.py  postgres_store.py  server.py  workflow_engine.py
examples/finance/: expense-approval.yaml  invoice-processing.yaml  purchase-request.yaml
examples/hr/: leave-request.yaml  pre-screening-interview.yaml
examples/it/: equipment-request.yaml
examples/procurement/: po-approval.yaml  purchase-order-with-signature.yaml  vendor-purchase-order.yaml
tests/: test_examples.py  test_runtime.py  test_yaml_validation.py
